Update ASSW Testbed .ipynb
reduce my stop words, correct 0- vs 1- base comment

--- a/notebooks/pdi/ASSW Testbed .ipynb
+++ b/notebooks/pdi/ASSW Testbed .ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This notebook uses topic modeling to analyze ASSW's abstracts. The notebook can be used to see how well the assigned sessions match the topics discovered from the abstracts themselves, so the organizers can adjust the sessions to improve how abstracts are assigned.\n",
     "\n",
-    "Note that topic modeling algorithms work best with a large, diverse corpus. The topics can be explored using LDAVis, which displays the topics in an X-Y plot (intertopic distance map). Topic are represented by circles whose areas are proportional to the relative prevalences of the topics in the corpus. In the display the user can enter a topic number (note 1-base numbering vs. 0-base numbering in Topic List below cells 5 and 7); the terms are displayed on the right, ranked by significance (weight). A topic can be selected on the fly by hovering over its circle; clicking selects that topic. A user can also click on a term in the RH panel to show the topics in which that term occurs. \n",
+    "Note that topic modeling algorithms work best with a large, diverse corpus. The topics can be explored using LDAVis, which displays the topics in an X-Y plot (intertopic distance map). Topic are represented by circles whose areas are proportional to the relative prevalences of the topics in the corpus. In the display the user can enter a topic number; the terms are displayed on the right, ranked by significance (weight). A topic can be selected on the fly by hovering over its circle; clicking selects that topic. A user can also click on a term in the RH panel to show the topics in which that term occurs. \n",
     "\n",
     "The slider at the top of the RH panel allows the user to vary the “saliency”, i.e. uniqueness of the terms to that topic. A value of 0.6 is optimal, according to the authors of the algorithm. Blue bars represent overall term frequency while red bars show term frequency within the topic, which will be different when the saliency Is selected be less than one.\n",
     "\n",
@@ -171,9 +171,10 @@
     "## our custom stop words, this words are excluded in topic analysis since they are too common.\n",
     "## modify it at will.\n",
     "my_stop_words = {\n",
-    "                    'area', 'data', 'event', 'doc', 'group', 'research', 'http', 'community', 'result', \n",
-    "                    'metadata', 'content', 'sharing', 'previous', 'model', 'science', 'scientiﬁc', 'user'\n",
+    "#                    'data'\n",
     "                }\n",
+    "#                    'area', 'data', 'event', 'doc', 'group', 'research', 'http', 'community', 'result', \n",
+    "#                    'metadata', 'content', 'sharing', 'previous', 'model', 'science', 'scientiﬁc', 'user'\n",
     "years = [str(year) for year in range(2000,2020)]\n",
     "words_and_years = my_stop_words.union(years)\n",
     "stop_words = words_and_years.union(ENGLISH_STOP_WORDS)\n",
